--- a/packages/externals/package.json
+++ b/packages/externals/package.json
@@ -2,7 +2,8 @@
   "name": "externals",
   "version": "1.0.0",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p --progress"
+    "build": "NODE_ENV=production webpack -p --progress",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "components": "^1.0.0",
