--- a/packages/externals/package.json
+++ b/packages/externals/package.json
@@ -2,6 +2,7 @@
   "name": "externals",
   "version": "1.0.0",
   "scripts": {
+    "start": "NODE_ENV=production webpack -d --watch",
     "build": "NODE_ENV=production webpack -p --progress",
     "postinstall": "npm run build"
   },
