Add react-router, Update UI, Add dynamic imports, Named externals lib

--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -15,8 +15,10 @@
   },
   "peerDependencies": {
     "components": "^1.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "single-spa-react": "^2.8.1"
+    "react": "*",
+    "react-dom": "*",
+    "react-router-dom": "*",
+    "loadable-components": "*",
+    "single-spa-react": "*"
   }
 }
