--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,10 +4,10 @@
   "main": "src",
   "scripts": {},
   "dependencies": {
-    "rebass": "^3.0.0-9",
-    "styled-components": "^4.0.0-beta.11.2"
+    "@material-ui/core": "^3.2.0"
   },
   "peerDependencies": {
-    "react": "^16.5.2"
+    "react": "*",
+    "react-router-dom": "*"
   }
 }
