--- a/packages/externals/package.json
+++ b/packages/externals/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "components": "^1.0.0",
+    "loadable-components": "^2.2.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "single-spa-react": "^2.8.1",
     "systemjs": "^2.0.2"
   },
