--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.3",
     "core-js": "^2.5.7",
     "lerna": "^3.4.1",
     "peer-deps-externals-webpack-plugin": "^1.0.4",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
