--- a/packages/navigation/package.json
+++ b/packages/navigation/package.json
@@ -1,9 +1,9 @@
 {
   "name": "navigation",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server -d --port 9010",
-    "build": "NODE_ENV=production webpack -p --progress",
+    "start": "NODE_ENV=development webpack-dev-server -d --port 9010 --hot --config ./webpack.config.development.js",
+    "build": "NODE_ENV=production webpack -p --progress --config ./webpack.config.production.js",
     "postinstall": "npm run build"
   },
   "devDependencies": {
