--- a/packages/externals/package.json
+++ b/packages/externals/package.json
@@ -12,10 +12,18 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "single-spa-react": "^2.8.1",
-    "systemjs": "^2.0.2"
+    "single-spa-react": "^2.8.1"
   },
   "devDependencies": {
     "webpack": "^4.20.2"
+  },
+  "peerDependencies": {
+    "components": "*",
+    "loadable-components": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-router-dom": "*",
+    "single-spa-react": "*",
+    "systemjs": "*"
   }
 }
