--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "single-spa": "^4.0.1"
+    "single-spa": "^4.0.1",
+    "systemjs": "^2.0.2"
   },
   "devDependencies": {
     "externals": "^1.0.0",
