--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,7 +4,11 @@
   "main": "src",
   "scripts": {},
   "dependencies": {
-    "@material-ui/core": "^3.2.0"
+    "@material-ui/core": "^3.2.0",
+    "@vx/group": "0.0.170",
+    "@vx/hierarchy": "0.0.179",
+    "@vx/shape": "0.0.179",
+    "d3-hierarchy": "^1.1.8"
   },
   "peerDependencies": {
     "react": "*",
