--- a/packages/app2/package.json
+++ b/packages/app2/package.json
@@ -7,6 +7,11 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "components": "^1.0.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
+    "single-spa-react": "^2.8.1",
     "react-hot-loader": "^4.3.11"
   },
   "devDependencies": {
@@ -14,10 +19,10 @@
     "webpack-dev-server": "^3.1.9"
   },
   "peerDependencies": {
-    "components": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-router-dom": "*",
-    "single-spa-react": "*"
+    "components": "^1.0.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
+    "single-spa-react": "^2.8.1"
   }
 }
