--- a/packages/externals/package.json
+++ b/packages/externals/package.json
@@ -2,26 +2,16 @@
   "name": "externals",
   "version": "1.0.0",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server -d --port 9050 --config ./webpack.config.development.js",
     "build": "NODE_ENV=production webpack -p --progress --config ./webpack.config.production.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "components": "^1.0.0",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
-    "react-router-dom": "4.3.1",
-    "single-spa-react": "2.8.1"
+    "app1": "^1.0.0",
+    "app2": "^1.0.0",
+    "navigation": "^1.0.0"
   },
   "devDependencies": {
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
-  },
-  "peerDependencies": {
-    "components": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-router-dom": "*",
-    "single-spa-react": "*"
   }
 }
